--- a/templates/directiveTemplates/vacancies.html
+++ b/templates/directiveTemplates/vacancies.html
@@ -1,5 +1,9 @@
 <div>
     <ion-list>
+        <ion-refresher
+                pulling-text="Pull to refresh..."
+                on-refresh="reloadFeed()">
+        </ion-refresher>
         <ion-item ng-repeat="story in stories" ng-href="#/app/feeds/{{feed}}/{{$index}}">
             <div class="feed-title">{{story.title}}</div>
             <div class="feed-body">{{cleanSnippet(story.contentSnippet)}}</div>
