--- a/templates/directiveTemplates/factSheets.html
+++ b/templates/directiveTemplates/factSheets.html
@@ -5,7 +5,7 @@
     </ion-refresher>
     <ion-item ng-repeat="story in stories" ng-href="#/app/feeds/{{feed}}/{{$index}}">
         <div class="feed-title">{{story.title}}</div>
-        <div class="feed-body">{{cleanSnippet(story.contentSnippet)}}</div>
+        <div class="feed-body">{{ContentSnippet(story.contentSnippet)}}</div>
         <h5>{{formatDate(story.publishedDate)}}</h5>
     </ion-item>
 </ion-list>
