--- a/templates/menu.html
+++ b/templates/menu.html
@@ -5,7 +5,7 @@
         </ion-nav-bar>
         <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
     </ion-pane>
-    <ion-side-menu expose-aside-when="large" side="left" id="side-menu">
+    <ion-side-menu side="left" id="side-menu">
         <header class="bar bar-header">
             <h1 class="title">USAID News Feeds</h1>
         </header>
