--- a/templates/directiveTemplates/frontlines.html
+++ b/templates/directiveTemplates/frontlines.html
@@ -1,4 +1,4 @@
-<ion-list ng-show="loaded">
+<ion-list>
     <ion-refresher
             pulling-text="Pull to refresh..."
             on-refresh="reloadFeed()">
@@ -10,7 +10,8 @@
         <!--<h3>{{story.publishedDate | date:'yyyy'}}</h3>-->
     </ion-item>
 </ion-list>
-<div ng-show="failed">
-    <p class="connection-failed"><a class="button icon-left ion-refresh button-clear button-dark connection-failed" ng-click="reload()">Connection Failed, Push to Refresh</a>
-    </p>
-</div>
+<!--<div ng-if="failed">-->
+    <!--<p class="connection-failed"><a class="button icon-left ion-refresh button-clear button-dark connection-failed" ng-click="reloadFeed()">Connection Failed, Push to Refresh</a>-->
+    <!--</p>-->
+<!--</div>-->
+
