--- a/templates/feedStory.html
+++ b/templates/feedStory.html
@@ -1,4 +1,7 @@
 <ion-view>
+    <ion-nav-title>
+        <img width="130px" height="48px" src="./img/USAID-logo3.png">
+    </ion-nav-title>
 	<ion-header-bar class="bar-subheader">
     	<h1 class="title">{{feedTitle}}</h1>
   	</ion-header-bar>
