--- a/templates/feeds.html
+++ b/templates/feeds.html
@@ -1,4 +1,7 @@
-<ion-view title='<img class="logo" src="./img/USAID-logo3.png">' id="header">
+<ion-view>
+    <ion-nav-title>
+        <img width="130px" height="48px" src="./img/USAID-logo3.png">
+    </ion-nav-title>
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
