--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,11 +1,18 @@
 <ion-side-menus>
     <ion-pane ion-side-menu-content>
-        <ion-nav-bar class="bar-calm nav-title-slide-ios7 menu-button" id="header">
+        <ion-nav-bar class="nav-title-slide-ios7 menu-button">
             <ion-nav-back-button class="button button-icon" animation="no-animation"><i class="icon ion-ios7-arrow-back"></i>Back</ion-nav-back-button>
         </ion-nav-bar>
         <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
     </ion-pane>
-    <ion-side-menu side="left" id="side-menu">
+    <!--<ion-side-menu side="right">-->
+        <!--<ion-content>-->
+            <!--<ion-list>-->
+                <!--<ion-item>Change Font Size</ion-item>-->
+            <!--</ion-list>-->
+        <!--</ion-content>-->
+    <!--</ion-side-menu>-->
+    <ion-side-menu expose-aside-when="large" side="left" id="side-menu">
         <header class="bar bar-header">
             <h1 class="title">USAID News Feeds</h1>
         </header>
