Push to production!

--- a/templates/feedStory.html
+++ b/templates/feedStory.html
@@ -2,7 +2,7 @@
     <ion-nav-title>
         <img width="130px" height="48px" src="./img/USAID-logo3.png">
     </ion-nav-title>
-	<ion-header-bar class="bar-subheader">
+	<ion-header-bar align-title="center" class="bar-subheader">
     	<h1 class="title">{{feedTitle}}</h1>
   	</ion-header-bar>
 	<ion-content id="feedStory" class="has-header">
