--- a/css/style.css
+++ b/css/style.css
@@ -159,9 +159,9 @@ body, h1, h2{
 	overflow: hidden;
 }
 
-.article-body div, .article-body p{
+.article-body div, .article-body p, .article-body span, .article-body {
     padding: 0px 3px 0px 3px;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .article-title{
