--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus>
     <ion-pane ion-side-menu-content>
-        <ion-nav-bar class="nav-title-slide-ios7 menu-button">
+        <ion-nav-bar align-title="center" class="nav-title-slide-ios7 menu-button">
             <ion-nav-back-button class="button button-icon" animation="no-animation"><i class="icon ion-ios7-arrow-back"></i>Back</ion-nav-back-button>
         </ion-nav-bar>
         <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
